# ks-library

./: .gitignore  LICENSE  README.md  Setup.hs  TODO  TODO.md  changelog.md  kitchensnitch-dl.cabal  ks-download.cabal  ks-library.cabal  ksdl.conf  stack.yaml
doc/dev/: notes
src/: Ksdl.hs  ks-dbinsert.hs  ks-dlinsp.hs  ks-docdump.hs  ks-dump.hs  ks-inspections.hs  ks-locate.hs  ks-location.hs  ks-mongo-insert.hs  main.hs
src/Data/Aeson/: Bson.hs
src/Database/Mongo/: Util.hs
src/KS/: Inspection.hs  Log.hs
src/KS/DLInsp/: Opts.hs  Types.hs
src/KS/DLInsp/Source/: Downloaders.hs  NCWake.hs
src/KS/Data/: BSON.hs  Common.hs  Document.hs  Feedback.hs  Inspection.hs  Place.hs
src/KS/Database/: Mongo.hs
src/KS/DlInsp/: Opts.hs  Types.hs
src/KS/DlInsp/Source/: Downloaders.hs  NcWake.hs
src/KS/Locate/: Config.hs  Locate.hs  Opts.hs
src/KS/Locate/Database/: Inspection.hs
src/KS/Locate/Places/: Geocoding.hs  Match.hs  NameWords.hs  Place.hs  Places.hs
src/Ks/: Inspection.hs  Log.hs
src/Ks/DlInsp/: Opts.hs  Types.hs
src/Ks/DlInsp/Source/: Common.hs  Downloaders.hs  NcWake.hs  Types.hs
src/Ks/Locate/: Config.hs  Locate.hs  Opts.hs
src/Ks/Locate/Database/: Inspection.hs
src/Ks/Locate/Places/: Geocoding.hs  Match.hs  NameWords.hs  Place.hs
src/Ksdl/: Config.hs  Facility.hs  Geocoding.hs  Inspection.hs  LocOpts.hs  Log.hs  Match.hs  NameWords.hs  Places.hs
src/Ksdl/Database/: Inspection.hs
src/Ksdl/InspSource/: Common.hs  NcWake.hs
src/Ksdl/Inspection/: Common.hs  NcWake.hs
src/Ksdl/Places/: Geocoding.hs  Match.hs  NameWords.hs  Place.hs
src/Ksdl/Source/: Common.hs  NcWake.hs
tests/: BSON.hs  Common.hs  Inspection.hs  Mongo.hs  ks_2015-07-08_BabymoonCafe.json  test-Data.hs  test-Database.hs
testsuite/: BSON.hs  Common.hs  FacilityUUID.hs  Inspection.hs  InspectionUUID.hs  Mongo.hs  NameWords.hs  ks_2015-07-08_BabymoonCafe.json  test-Data.hs  test-Database.hs  test-ks-loc.hs
util/: inspconv.coffee  install.sh  ks-dl-nightly.sh
util/resources/: facilities-01  geocode.json  places.json  searchResultPage.html
util/resources/nc-wake/: 7b1b6789-92e3-4118-9fff-bdb56a6578f9  ee8ba0df-ae66-4c94-89ca-1234fb100ff6
