name:                kitchensnitch-dl
version:             1.3
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2014-2015 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://foo/bar/baz.html
synopsis:            Data downloader and parser for the KitchenSnitch project
description:         Bar Baz
category:            Unknown
tested-with:         GHC >= 7.8.3
extra-source-files:  changelog.md
                     doc/dev/notes
                     README.md
                     TODO
                     util/gentags.sh
                     util/resources/facilities-01
                     util/resources/searchResultsPage.html
                     testsuite/InspectionUUID.hs
                     testsuite/NameWords.hs
                     testsuite/test-ks-loc.hs

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/kitchensnitch-dl

executable           ks-inspections
   main-is:          ks-inspections.hs
   hs-source-dirs:   src
   build-depends:      aeson
                     , base >= 3 && < 5
                     , bytestring
                     , containers
                     , filepath
                     , HTTP
                     , regex-compat
                     , tagsoup
                     , text
                     , utf8-string
                     , uuid
   ghc-options:      -Wall

executable           ks-location
   main-is:          ks-location.hs
   hs-source-dirs:   src
   build-depends:      aeson
                     , aeson-pretty
                     , attoparsec
                     , base >= 3 && < 5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hslogger
                     , HTTP
                     , http-conduit
                     , mtl
                     , old-locale
                     , regex-compat
                     , text
                     , text-format
                     , time
                     , utf8-string
                     , uuid
   ghc-options:      -Wall

test-suite           test-ks-loc
   type:             exitcode-stdio-1.0
   main-is:          test-ks-loc.hs
   hs-source-dirs:   src testsuite
   build-depends:      aeson
                     , base >= 3 && < 5
                     , bytestring
                     , containers
                     , filepath
                     , hslogger
                     , HUnit
                     , mtl
                     , regex-compat
                     , text
                     , utf8-string
                     , uuid
   ghc-options:      -Wall
