name:                ks-download
version:             1.7
cabal-version:       >= 1.8
build-type:          Custom
license:             BSD3
license-file:        LICENSE
copyright:           2014-2015 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://hub.darcs.net/dino/ks-download
synopsis:            Data downloader and parser for the KitchenSnitch project
description:         Bar Baz
category:            Unknown
tested-with:         GHC >= 7.10.1
extra-source-files:  changelog.md
                     doc/dev/notes
                     README.md
                     TODO
                     util/gentags.sh
                     util/resources/facilities-01
                     util/resources/searchResultsPage.html
                     testsuite/InspectionUUID.hs
                     testsuite/NameWords.hs
                     testsuite/test-ks-loc.hs

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/ks-download

executable           ks-dlinsp
   main-is:          ks-dlinsp.hs
   hs-source-dirs:   src
   build-depends:      aeson
                     , base >= 3 && < 5
                     , bytestring
                     , containers
                     , filepath
                     , HTTP
                     , mtl
                     , regex-compat
                     , tagsoup
                     , text
                     , time
                     , tz
                     , utf8-string
   ghc-options:      -Wall

executable           ks-locate
   main-is:          ks-locate.hs
   hs-source-dirs:   src
   build-depends:      aeson
                     , aeson-pretty
                     , attoparsec
                     , base >= 3 && < 5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , geojson
                     , hslogger
                     , HTTP
                     , http-conduit
                     , mtl
                     , old-locale
                     , regex-compat
                     , tce-conf
                     , text
                     , text-format
                     , time
                     , utf8-string
   ghc-options:      -Wall

test-suite           test-Locate
   type:             exitcode-stdio-1.0
   main-is:          test-Locate.hs
   hs-source-dirs:   src testsuite
   build-depends:      aeson
                     , base >= 3 && < 5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hslogger
                     , HUnit
                     , mtl
                     , regex-compat
                     , tce-conf
                     , text
                     , time
                     , utf8-string
   ghc-options:      -Wall

executable           ks-dbinsert
   main-is:          ks-dbinsert.hs
   hs-source-dirs:   src
   build-depends:      aeson
                     , aeson-pretty
                     , attoparsec
                     , base >= 3 && < 5
                     , bson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , geojson
                     , hslogger
                     , HTTP
                     , http-conduit
                     , mongoDB
                     , mtl
                     , old-locale
                     , regex-compat
                     , tce-conf
                     , text
                     , text-format
                     , time
                     , utf8-string
   ghc-options:      -Wall

--executable           ks-dump
--   main-is:          ks-dump.hs
--   hs-source-dirs:   src
--   build-depends:      aeson
--                     , aeson-pretty
--                     , attoparsec
--                     , base >= 3 && < 5
--                     , bytestring
--                     , containers
--                     , directory
--                     , filepath
--                     , hslogger
--                     , HTTP
--                     , http-conduit
--                     , mtl
--                     , old-locale
--                     , regex-compat
--                     , text
--                     , text-format
--                     , time
--                     , utf8-string
--   ghc-options:      -Wall

--executable           ks-docdump
--   main-is:          ks-docdump.hs
--   hs-source-dirs:   src
--   build-depends:      aeson
--                     , aeson-pretty
--                     , attoparsec
--                     , base >= 3 && < 5
--                     , bytestring
--                     , containers
--                     , directory
--                     , filepath
--                     , hslogger
--                     , HTTP
--                     , http-conduit
--                     , mtl
--                     , old-locale
--                     , regex-compat
--                     , tce-conf
--                     , text
--                     , text-format
--                     , time
--                     , utf8-string
--   ghc-options:      -Wall
