name: ks-library
version: 1.12
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2015, 2016 Dino Morelli
maintainer: Dino Morelli <dino@ui3.info>
stability: experimental
homepage: http://hub.darcs.net/dino/ks-library
synopsis: Library of common modules for KitchenSnitch
description:
    Bar Baz
category: Data
author: Dino Morelli
tested-with: GHC >=7.10.1
extra-source-files:
    changelog.md
    doc/dev/notes
    LICENSE_aeson-bson
    README.md
    TODO.md
    util/gentags.sh
    util/install.sh

source-repository head
    type: darcs
    location: http://hub.darcs.net/dino/ks-library

library
    exposed-modules:
        Data.Aeson.Bson
        Database.Mongo.Util
        KS.Data.BSON
        KS.Data.Common
        KS.Data.Document
        KS.Data.Inspection
        KS.Data.Place
    build-depends:
        aeson,
        array,
        base >=3 && <5,
        bson,
        bson-generic,
        bytestring,
        containers,
        directory,
        filepath,
        mongoDB,
        mtl,
        regex-compat,
        scientific,
        text,
        time,
        unordered-containers,
        vector
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite test-Data
    type: exitcode-stdio-1.0
    main-is: test-Data.hs
    build-depends:
        aeson,
        base >=3 && <5,
        bson,
        bson-generic,
        bytestring,
        directory,
        filepath,
        HUnit,
        regex-compat,
        text,
        time
    default-language: Haskell2010
    hs-source-dirs: src testsuite
    other-modules:
        BSON
        Inspection
        KS.Data.Common
        KS.Data.Document
        KS.Data.Inspection
        KS.Data.Place
    ghc-options: -Wall

test-suite test-Database
    type: exitcode-stdio-1.0
    main-is: test-Database.hs
    build-depends:
        base >=3 && <5,
        bson,
        HUnit,
        mongoDB,
        mtl,
        text
    default-language: Haskell2010
    hs-source-dirs: src testsuite
    other-modules:
        Database.Mongo.Util
        Mongo
    ghc-options: -Wall
