name: ks-library
version: 1.13
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2015, 2016 Dino Morelli
maintainer: Dino Morelli <dino@ui3.info>
stability: experimental
homepage: http://hub.darcs.net/dino/ks-library
synopsis: Library of common modules for KitchenSnitch
description:
    Bar Baz
category: Data
author: Dino Morelli
tested-with: GHC >=7.10.1
extra-source-files:
    changelog.md
    doc/dev/notes
    LICENSE_aeson-bson
    README.md
    TODO.md
    util/gentags.sh
    util/install.sh

source-repository head
    type: darcs
    location: http://hub.darcs.net/dino/ks-library

library
    exposed-modules:
        Data.Aeson.Bson
        Database.Mongo.Util
        KS.Data.BSON
        KS.Data.Common
        KS.Data.Document
        KS.Data.Feedback
        KS.Data.Inspection
        KS.Data.Place
    build-depends:
        aeson,
        array,
        base >=3 && <5,
        bson,
        bson-generic,
        bytestring,
        containers,
        directory,
        filepath,
        mongoDB,
        mtl,
        regex-compat,
        scientific,
        text,
        time,
        unordered-containers,
        vector
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite test-Data
    hs-source-dirs: tests src
    main-is: test-Data.hs
    ghc-options: -Wall -fwarn-tabs
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    build-depends:
        aeson,
        base >=3 && <5,
        bson,
        bson-generic,
        bytestring,
        directory,
        filepath,
        hspec,
        regex-compat,
        text,
        time
    other-modules:
        BSON
        Common
        Inspection
        KS.Data.Common
        KS.Data.Document
        KS.Data.Inspection
        KS.Data.Place

test-suite test-Database
    hs-source-dirs: tests src
    main-is: test-Database.hs
    ghc-options: -Wall -fwarn-tabs
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    build-depends:
        base >=3 && <5,
        bson,
        hspec,
        mongoDB,
        mtl,
        text
    other-modules:
        Database.Mongo.Util
        Mongo
