cabal-version: 2.2

name: ks-library
version: 1.14
synopsis: Library of common modules for KitchenSnitch
description:
  Bar Baz
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2015, 2016 Dino Morelli
category: Data
license: BSD-3-Clause
license-file: LICENSE
homepage: http://hub.darcs.net/dino/ks-library
build-type: Simple
extra-source-files:
  doc/dev/notes
  README.md
  TODO.md
  util/gentags.sh
  util/install.sh
extra-doc-files:
  changelog.md

source-repository head
  type: git
  location: https://github.com/dino-/ks-library.git

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >=3 && <5
    , bson
    , text

library
  import: lang
  exposed-modules:
    Database.Mongo.Util
    KS.Data.BSON
    KS.Data.Common
    KS.Data.Document
    KS.Data.Feedback
    KS.Data.Inspection
    KS.Data.Place
  hs-source-dirs:
    src
  build-depends:
      aeson
    , AesonBson
    , array
    , bson-generic
    , bytestring
    , containers
    , directory
    , filepath
    , mongoDB
    , mtl
    , regex-compat
    , scientific
    , time
    , unordered-containers
    , vector

test-suite test-Data
  import: lang
  type: exitcode-stdio-1.0
  main-is: test-Data.hs
  hs-source-dirs:
    tests
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  other-modules:
    BSON
    Common
    Inspection
  build-depends:
      aeson
    , bson-generic
    , bytestring
    , directory
    , filepath
    , hspec
    , ks-library
    , regex-compat
    , time

test-suite test-Database
  import: lang
  type: exitcode-stdio-1.0
  main-is: test-Database.hs
  hs-source-dirs:
    tests
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  other-modules:
    Mongo
  build-depends:
    , hspec
    , ks-library
    , mongoDB
    , mtl
